# stm32-mini-f411-blinky-zephyr

./: .gitignore  CMakeLists.txt  README.md  build.bat  prj.conf
boards/arm/stm32_min_dev_f411ce/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32_min_dev_f411ce.dts  stm32_min_dev_f411ce.yaml  stm32_min_dev_f411ce_defconfig
boards/arm/stm32_min_dev_f411ce/support/: openocd.cfg
src/: main.c
